--- a/BasicStorageServer-stub/ecs.config
+++ b/BasicStorageServer-stub/ecs.config
@@ -1,10 +1,9 @@
-node1 localhost 50000
-node2 localhost 50001
-node3 localhost 50002
-node4 localhost 50003
-node5 localhost 50004
-node6 localhost 50005
-node7 localhost 50006
-node8 localhost 50007
-node9 localhost 50008
-node10 localhost 50009
+node1 131.159.215.36 50000
+node2 131.159.215.36 50001
+node3 131.159.220.218 50002
+node4 131.159.220.218 50003
+node5 131.159.220.218 50004
+node6 131.159.220.218 50005
+node7 131.159.210.157 50006
+node8 131.159.210.157 50007
+node9 131.159.210.157 50008
